Update to reflect new directory layout.

--- a/annotation-file-utilities/global.build.properties
+++ b/annotation-file-utilities/global.build.properties
@@ -6,19 +6,20 @@
 # and prefixed with 'env.' as such: ${env.PATH}
 
 # Annotation file utilities proper
-annotations : ${env.JAVARI_ANNOTATION_WORKSPACE}/annotations
-asmx : ${annotations}/asmx
-scene-lib : ${annotations}/scene-lib
+workspace : ${env.JAVARI_ANNOTATION_WORKSPACE}
+annotation-tools : ${workspace}/annotation-tools
+asmx : ${annotation-tools}/asmx
+scene-lib : ${annotation-tools}/scene-lib
 # The distribution is the result of zipping this directory
 temp-annotation-file-utilities : ${java.io.tmpdir}/annotation-file-utilities
 
 # Compiler.  For annotations-compiler builds, use:   antfile="make/build.xml"
-annotations-compiler : ${annotations}/langtools
-annotations-disassembler : ${annotations}/langtools
+annotations-compiler : ${workspace}/jsr308-langtools
+annotations-disassembler : ${workspace}/jsr308-langtools
 
 # Other tools
-javarifier : ${env.JAVARI_ANNOTATION_WORKSPACE}/javari/javarifier
-javari-annotated-jdk : ${env.JAVARI_ANNOTATION_WORKSPACE}/annotations/checkers/jdk/javari
+javarifier : ${workspace}/javari/javarifier
 checkers : ${annotations}/checkers
+javari-annotated-jdk : ${checkers}/jdk/javari
 
 
