--- a/scene-lib/global.build.properties
+++ b/scene-lib/global.build.properties
@@ -5,15 +5,16 @@
 # Environment variables can be used, but must be enclosed in brackets
 # and prefixed with 'env.' as such: ${env.PATH}
 
-annotations : ${env.JAVARI_ANNOTATION_WORKSPACE}/annotations
+workspace : ${env.JAVARI_ANNOTATION_WORKSPACE}
+annotation-tools : ${env.JAVARI_ANNOTATION_WORKSPACE}/annotation-tools
 asmx : ${annotations}/asmx
-javari-annotated-jdk : ${env.JAVARI_ANNOTATION_WORKSPACE}/annotations/checkers/jdk/javari
-scene-lib : ${annotations}/scene-lib
+scene-lib : ${annotation-tools}/scene-lib
 # For annotations-compiler builds, use:   antfile="make/build.xml"
-annotations-compiler : ${annotations}/langtools
-annotations-disassembler : ${annotations}/langtools
-javarifier : ${env.JAVARI_ANNOTATION_WORKSPACE}/javari/javarifier
-annotator : ${annotations}/annotator
+annotations-compiler : ${workspace}/jsr308-langtools
+annotations-disassembler : ${workspace}/jsr308-langtools
+javarifier : ${workspace}/javari/javarifier
+annotator : ${annotation-tools}/annotator
 temp-annotation-file-utilities : ${java.io.tmpdir}/annotation-file-utilities
-checkers : ${annotations}/checkers
+checkers : ${workspace}/checker-framework/checkers
+javari-annotated-jdk : ${checkeurs}/jdk/javari
 
