Move build properties up in directory structure, to avoid duplication.

--- a/annotation-file-utilities/build.properties
+++ b/annotation-file-utilities/build.properties
@@ -1,2 +1,2 @@
-global.build.properties : ./global.build.properties
-user.build.properties : ./user.build.properties
+global.build.properties : ../global.build.properties
+user.build.properties : ../user.build.properties
