--- a/global.build.properties
+++ b/global.build.properties
@@ -18,8 +18,6 @@ annotations-compiler : ${workspace}/jsr308-langtools
 annotations-disassembler : ${workspace}/jsr308-langtools
 
 # Other tools
-javarifier : ${workspace}/javari/javarifier
-checkers : ${annotations}/checkers
+javarifier : ${workspace}/javarifier
+checkers : ${workspace}/checker-framework/checkers
 javari-annotated-jdk : ${checkers}/jdk/javari
-
-
