--- a/scene-lib/build.properties
+++ b/scene-lib/build.properties
@@ -1,2 +1,2 @@
-global.build.properties : ./global.build.properties
-user.build.properties : ./user.build.properties
+global.build.properties : ../global.build.properties
+user.build.properties : ../user.build.properties
