--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,3 @@
-# use glob syntax.
 syntax: glob
 
 bin
@@ -14,3 +13,9 @@ annotation-file-format.log
 annotation-file-format.pdf
 annotation-file-utilities.jar
 annotation-file-utilities.zip
+
+annotation-file-utilities/tests/*.diff
+annotation-file-utilities/tests/*.log
+annotation-file-utilities/tests/*.output
+annotation-file-utilities/tests/system-test/out2.jann
+annotation-file-utilities/tests/system-test/out5.jann
