--- a/scene-lib/build.xml
+++ b/scene-lib/build.xml
@@ -3,23 +3,23 @@
 
     <property environment="env"/>
 
-	<macrodef name="echo-fileset">
-		<attribute name="filesetref" />
-	   	<sequential>
-	        <pathconvert pathsep="
+    <macrodef name="echo-fileset">
+        <attribute name="filesetref" />
+        <sequential>
+            <pathconvert pathsep="
 " property="@{filesetref}.echopath">
-		   		<path>
-		   			<fileset refid="@{filesetref}" />
-		   		</path>
-		   	</pathconvert>
-    		<echo>   ------- echoing fileset @{filesetref} -------</echo>
-	        <echo>${@{filesetref}.echopath}</echo>
-	   	</sequential>
-	</macrodef>
+                <path>
+                    <fileset refid="@{filesetref}" />
+                </path>
+            </pathconvert>
+            <echo>   ------- echoing fileset @{filesetref} -------</echo>
+            <echo>${@{filesetref}.echopath}</echo>
+        </sequential>
+    </macrodef>
 
     <taskdef resource="net/sf/antcontrib/antcontrib.properties">
       <classpath>
-	<pathelement location="ant-contrib.jar" />
+        <pathelement location="ant-contrib.jar" />
       </classpath>
     </taskdef>
 
@@ -30,10 +30,10 @@
         <fail
             unless="exists.build.properties" 
             message="Local build.properites file is missing."/>
-        
+
         <property file="build.properties"/>
-        
-        <fail 
+
+        <fail
             unless="global.build.properties" 
             message="Local build.properties file did not define global buildfile in property global.build.properties"/>
         <condition property="exists.global.build.properties">
@@ -56,7 +56,7 @@
         <property file="${user.build.properties}"/>
 
     </target>
-    
+
     <target name="init-dependencies"
             depends="init-properties">
         <!-- I should reinstate this after figuring out how to make
@@ -74,10 +74,14 @@
         <ant dir="${checkers}" inheritAll="false" target="build"/>
         -->
     </target>
-    
+
     <target name="init-paths">
         <path id="sourcepath">
             <pathelement location="src"/>
+        </path>
+        <path id="testpath">
+            <pathelement location="test/annotations/tests/executable"/>
+            <pathelement location="test/annotations/tests/classfile/foo"/>
         </path>
 
         <fileset dir="." id="source.files.java">
@@ -85,7 +89,7 @@
             <exclude name="**/.svn"/>
             <exclude name="**/package-info.java"/>
         </fileset>
-    
+
         <fileset dir="." id="source.files.java.nopackageinfo">
             <include name="src/**/*.java"/>
             <exclude name="**/.svn"/>
@@ -99,13 +103,13 @@
         <fileset dir="." id="source.files.non-java">
             <include name="src/**/*"/>
             <exclude name="**/.svn"/>
-	    <exclude name="**/*.java"/>
+            <exclude name="**/*.java"/>
         </fileset>
 
         <path id="javadoc-sourcepath">
             <pathelement location="src"/>
         </path>
-                        
+
         <path id="libpath">
             <pathelement location="${asmx}/bin"/>
             <pathelement location="${junit}"/>
@@ -117,53 +121,52 @@
             <pathelement location="bin"/>
         </path>
     </target>
-        
+
     <target name="init" depends="init-properties, init-dependencies, init-paths"/>
 
     <target name="bin-clean">
         <delete dir="bin"/>
     </target>
-    
+
     <target name="bin-check-uptodate" depends="init">
-
-	<uptodate property="source.files.non-java.uptodate">
-	  <srcfiles refid="source.files.non-java"/>
-          <mapper type="glob" from="src/*" to="bin/*"/>
-	</uptodate>
-
-	<uptodate property="source.files.java.nopackageinfo.uptodate">
-	  <srcfiles refid="source.files.java.nopackageinfo"/>
-          <mapper type="glob" from="src/*.java" to="bin/*.class"/>
+        <uptodate property="source.files.non-java.uptodate">
+            <srcfiles refid="source.files.non-java"/>
+            <mapper type="glob" from="src/*" to="bin/*"/>
         </uptodate>
 
-	<!-- I want to say that package-info.java does not force
-	recompilation if it is older than all source files in its own
-	package. -->
-	<uptodate property="source.files.java.packageinfo.uptodate" targetfile="bin">
-	  <srcfiles refid="source.files.java.packageinfo"/>
+        <uptodate property="source.files.java.nopackageinfo.uptodate">
+            <srcfiles refid="source.files.java.nopackageinfo"/>
+            <mapper type="glob" from="src/*.java" to="bin/*.class"/>
         </uptodate>
 
-	<condition property="bin.uptodate">
-	  <and>
-	    <isset property="source.files.non-java.uptodate"/>
-	    <isset property="source.files.java.nopackageinfo.uptodate"/>
-	    <isset property="source.files.java.packageinfo.uptodate"/>
-	  </and>
-	</condition>
+        <!-- I want to say that package-info.java does not force
+        recompilation if it is older than all source files in its own
+        package. -->
+        <uptodate property="source.files.java.packageinfo.uptodate" targetfile="bin">
+            <srcfiles refid="source.files.java.packageinfo"/>
+        </uptodate>
 
-	<echo message="source.files.non-java.uptodate: ${source.files.non-java.uptodate}"/>
-	<echo message="source.files.java.nopackageinfo.uptodate: ${source.files.java.nopackageinfo.uptodate}"/>
-	<echo message="source.files.java.packageinfo.uptodate: ${source.files.java.packageinfo.uptodate}"/>
-	<echo message="bin.uptodate: ${bin.uptodate}"/>
-	
+        <condition property="bin.uptodate">
+          <and>
+            <isset property="source.files.non-java.uptodate"/>
+            <isset property="source.files.java.nopackageinfo.uptodate"/>
+            <isset property="source.files.java.packageinfo.uptodate"/>
+          </and>
+        </condition>
+
+        <echo message="source.files.non-java.uptodate: ${source.files.non-java.uptodate}"/>
+        <echo message="source.files.java.nopackageinfo.uptodate: ${source.files.java.nopackageinfo.uptodate}"/>
+        <echo message="source.files.java.packageinfo.uptodate: ${source.files.java.packageinfo.uptodate}"/>
+        <echo message="bin.uptodate: ${bin.uptodate}"/>
     </target>
 
     <target name="bin" depends="init, bin-check-uptodate" unless="bin.uptodate">
-	<echo message="Running bin"/>
+        <echo message="Running bin"/>
         <mkdir dir="bin"/>
-	<!-- Copy non-java files to bin.  These are mostly .jann files. -->
+        <!-- Copy non-java files to bin.  These are mostly .jann files. -->
         <copy todir="bin">
             <fileset dir="src" excludes="**/*.java"/>
+            <fileset dir="test" excludes="**/*.java"/>
         </copy>
         <javac 
                destdir="bin" 
@@ -174,14 +177,23 @@
                fork="true"
                executable="${annotations-compiler}/dist/bin/javac">
             <src refid="sourcepath"/>
+            <src refid="testpath"/>
             <compilerarg value="-Xbootclasspath/p:${toString:libpath}"/>
             <!-- To prevent a cyclic dependency with the Checker
                  Framework, ignore type annotations in comments here.
                  A separate target could be added to check the qualifiers
                  and have them in the generated code. -->
             <compilerarg value="-XDTA:noannotationsincomments"/>
+            <!-- Make sure we only have Java 7 source code and generate Java 7 bytecode. -->
+            <compilerarg value="-source"/>
+            <compilerarg value="7"/>
+            <compilerarg value="-target"/>
+            <compilerarg value="7"/>
             <classpath refid="libpath"/>
-        </javac> 
+            <!-- TODO: how can we include just these two files in testpath? -->
+            <compilerarg value="test/annotations/tests/classfile/AnnotationsTest.java"/>
+            <compilerarg value="test/annotations/tests/classfile/AnnotationVerifier.java"/>
+        </javac>
 <!--
        <pathconvert property="libpath" refid="libpath"/>
        <pathconvert property="source.files.java.spaceseparated" refid="source.files.java" pathsep=" "/>
@@ -196,20 +208,20 @@
         </exec>
 -->
     </target>
-    
+
     <target name="test-scene-lib" depends="init, bin">
         <mkdir dir="reports"/>
         <junit printsummary="withOutAndErr" showoutput="true" fork="yes" dir="." haltonfailure="yes">
             <jvmarg value="-Xbootclasspath/p:${toString:libpath}"/>
             <classpath refid="libpath"/>
             <formatter type="plain"/>
-            <test name="annotations.tests.TestSceneLib" todir="reports"/>
-	    <assertions>
-	      <enable/>
-	    </assertions>
+            <test name="annotations.tests.executable.TestSceneLib" todir="reports"/>
+            <assertions>
+              <enable/>
+            </assertions>
         </junit>
     </target>
-    
+
     <target name="test-classfile" depends="init, bin">
         <mkdir dir="reports"/>
         <junit printsummary="withOutAndErr" showoutput="true" fork="yes" dir="." haltonfailure="yes">
@@ -217,14 +229,14 @@
             <classpath refid="libpath"/>
             <formatter type="plain"/>
             <test name="annotations.tests.classfile.AnnotationsTest" todir="reports"/>
-	    <assertions>
-	      <enable/>
-	    </assertions>
+            <assertions>
+              <enable/>
+            </assertions>
         </junit>
     </target>
-    
+
     <target name="test-example" depends="init, bin">
-	<!-- Working directory is ignored when same JVM is used.  That means
+        <!-- Working directory is ignored when same JVM is used.  That means
              that the relative path for ${scene-lib} works only if this target
              is invoked from the same directory as the build.xml file appears
              in.  We can fix the java task by adding this:
@@ -232,62 +244,62 @@
               dir="${scene-lib}/src/annotations/tests"
              but there are other uses of ${scene-lib} in this target.
         -->
-        <java classname="annotations.tests.Example"
-              output="${scene-lib}/src/annotations/tests/example-stdout.jann"
+        <java classname="annotations.tests.executable.Example"
+              output="${scene-lib}/test/annotations/tests/executable/example-stdout.jann"
               classpathref="libpath">
-            <arg value="${scene-lib}/src/annotations/tests/example-input.jann" />
+            <arg value="${scene-lib}/test/annotations/tests/executable/example-input.jann" />
             <arg value="foo.Bar" />
-            <arg value="${scene-lib}/src/annotations/tests/example-output.jann" />
+            <arg value="${scene-lib}/test/annotations/tests/executable/example-output.jann" />
         </java>
         <condition property="example.output.matches">
-            <filesmatch file1="${scene-lib}/src/annotations/tests/example-output.jann.goal"
-                        file2="${scene-lib}/src/annotations/tests/example-output.jann"/>
+            <filesmatch file1="${scene-lib}/test/annotations/tests/executable/example-output.jann.goal"
+                        file2="${scene-lib}/test/annotations/tests/executable/example-output.jann"/>
         </condition>
-	<!-- Debugging output in case I don't have access to the filesystem. -->
-	<if>
-	    <isfalse value="${example.output.matches}"/>
-	    <then>
-		<exec executable="cat">
-		  <arg value="${scene-lib}/src/annotations/tests/example-output.jann.goal"/>
-		  <arg value="${scene-lib}/src/annotations/tests/example-output.jann"/>
-		</exec>
+        <!-- Debugging output in case I don't have access to the filesystem. -->
+        <if>
+            <isfalse value="${example.output.matches}"/>
+            <then>
+                <exec executable="cat">
+                  <arg value="${scene-lib}/test/annotations/tests/executable/example-output.jann.goal"/>
+                  <arg value="${scene-lib}/test/annotations/tests/executable/example-output.jann"/>
+                </exec>
             </then>
         </if>
         <fail unless="example.output.matches" 
-            message="In ${scene-lib}/src/annotations/tests/, file example-output.jann does not match goal."/>
+            message="In ${scene-lib}/test/annotations/tests/executable/, file example-output.jann does not match goal."/>
         <condition property="example.stdout.matches">
-            <filesmatch file1="${scene-lib}/src/annotations/tests/example-stdout.jann.goal"
-                        file2="${scene-lib}/src/annotations/tests/example-stdout.jann"/>
+            <filesmatch file1="${scene-lib}/test/annotations/tests/executable/example-stdout.jann.goal"
+                        file2="${scene-lib}/test/annotations/tests/executable/example-stdout.jann"/>
         </condition>
         <fail unless="example.stdout.matches" 
-            message="In ${scene-lib}/src/annotations/tests/, file example-stdout.jann does not match goal."/>
+            message="In ${scene-lib}/test/annotations/tests/executable/, file example-stdout.jann does not match goal."/>
 
     </target>
-    
+
     <target name="test-clean">
         <delete dir="reports"/>
     </target>
-    
+
     <target name="test" depends="test-scene-lib, test-classfile, test-example"
        description="Run tests"/>
     <target name="clean" depends="bin-clean, javadoc-clean, test-clean"
        description="Remove generated files"/>
-    
+
     <target name="javadoc-clean">
         <delete dir="javadoc"/>
     </target>
-    
+
     <target name="javadoc" depends="javadoc-clean, init"
        description="Generate Javadoc API documentation">
         <javadoc sourcepathref="javadoc-sourcepath" 
-		classpathref="libpath"
-		packagenames="*"
-		excludepackagenames="annotations.tests.*"
-		Overview="overview.html"
-		destdir="javadoc" 
-		access="public"
-		noqualifier="annotations:annotations.el:annotations.field:annotations.io:annotations.io.classfile:annotations.util:annotations.util.coll:java.lang"
-		/>
+                classpathref="libpath"
+                packagenames="*"
+                excludepackagenames=""
+                Overview="overview.html"
+                destdir="javadoc" 
+                access="public"
+                noqualifier="annotations:annotations.el:annotations.field:annotations.io:annotations.io.classfile:annotations.util:annotations.util.coll:java.lang"
+                />
     </target>
 
     <target name="test-package" depends="bin">
