--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -10,8 +10,11 @@
 
   <property name="java-version" value="8"/>
 
+  <tstamp>
+      <format property="TIME" pattern="yy-MM-dd-hh-mm-ss-SS" />
+  </tstamp>
   <!-- Avoid conflicts between multiple users on the same computer. -->
-  <property name="tmpdir" location="${java.io.tmpdir}/${user.name}" />
+  <property name="tmpdir" location="${java.io.tmpdir}/${user.name}/${TIME}" />
   <!-- The distribution is the result of zipping this directory. -->
   <property name="temp-annotation-tools" location="${tmpdir}/annotation-tools" />
 
