A build with target 'javadoc' should fail if javadoc fails.

--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -105,6 +105,7 @@
   <target name="javadoc" depends="javadoc-clean, init">
       <javadoc sourcepathref="javadoc-sourcepath"
           classpathref="libpath"
+          failonerror="true"
           packagenames="*"
           destdir="javadoc" 
           access="public"
