--- a/annotation-file-utilities/figures/Makefile
+++ b/annotation-file-utilities/figures/Makefile
@@ -6,7 +6,8 @@ DIA?=dia
 
 EPSFILES = scene-lib-type-hierarchy.eps
 PDFFILES = scene-lib-type-hierarchy.pdf
-PNGFILES = scene-lib-type-hierarchy.png tool-relations.png
+PNGFILES = scene-lib-type-hierarchy.png tool-relations.png \
+           corresp.png dataflow.png nocast.png typecast.png
 
 all: ${EPSFILES} ${PDFFILES} ${PNGFILES} png-copy
 
@@ -19,8 +20,14 @@ png-copy: ${PNGFILES}
 %.pdf : %.eps
 	epstopdf $<
 
-%.png : %.dia
-	$(DIA) -t png $<
+scene-lib-type-hierarchy.png : scene-lib-type-hierarchy.dia
+	$(DIA) -t png scene-lib-type-hierarchy.dia
+
+tool-relations.png : tool-relations.dia
+	$(DIA) -t png tool-relations.dia
+
+%.png : %.dot
+	dot -Tpng $< > `basename $< .dot`.png
 
 clean:
 	@\rm -f *.eps
