Forgot ant call...

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_script:
   - cd $HOME
   - git clone https://github.com/typetools/jsr308-langtools.git
   - cd jsr308-langtools/make
+  - ant
   - cd $TRAVIS_BUILD_DIR
   - ant clean
 
