--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,6 @@
 language: java
 
-before_script:
-  - cd $HOME
-  - git clone https://github.com/typetools/jsr308-langtools.git
-  - cd jsr308-langtools/make
-  - ant
-  - cd $TRAVIS_BUILD_DIR
-  - ant clean
-
-script: ant all
+script: ./travis-build.sh
 
 jdk:
   - oraclejdk8
