--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -156,9 +156,8 @@
       <uptodate property="scene-lib.bin.uptodate" targetfile="annotation-file-utilities.jar">
         <srcfiles dir="${scene-lib}/bin" excludes="annotations-expected/**,annotations/tests/**"/>
       </uptodate>
-      <uptodate property="build.classes.uptodate" targetfile="annotation-file-utilities.jar">
-        <srcfiles dir="${annotations-compiler}/build/classes" />
-      </uptodate>
+      <uptodate property="annotations-compiler.uptodate" targetfile="annotation-file-utilities.jar" srcfile="${annotations-compiler}/dist/lib/javac.jar"/>
+      <uptodate property="annotations-disassembler.uptodate" targetfile="annotation-file-utilities.jar" srcfile="${annotations-disassembler}/dist/lib/javap.jar"/>
       <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/plume.jar"/>
       <uptodate property="google-collect.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/guava-15.0.jar"/>
 
@@ -167,7 +166,8 @@
           <isset property="bin.uptodate"/>
           <isset property="asmx.bin.uptodate"/>
           <isset property="scene-lib.bin.uptodate"/>
-          <isset property="build.classes.uptodate"/>
+          <isset property="annotations-compiler.uptodate"/>
+          <isset property="annotations-disassembler.uptodate"/>
           <isset property="plume.uptodate"/>
           <isset property="google-collect.uptodate"/>
         </and>
@@ -176,7 +176,8 @@
       <echo message="bin.uptodate: ${bin.uptodate}"/>
       <echo message="asmx.bin.uptodate: ${asmx.bin.uptodate}"/>
       <echo message="scene-lib.bin.uptodate: ${scene-lib.bin.uptodate}"/>
-      <echo message="build.classes.uptodate: ${build.classes.uptodate}"/>
+      <echo message="annotations-compiler.uptodate: ${annotations-compiler.uptodate}"/>
+      <echo message="annotations-disassembler.uptodate: ${annotations-disassembler.uptodate}"/>
       <echo message="plume.uptodate: ${plume.uptodate}"/>
       <echo message="google-collect.uptodate: ${google-collect.uptodate}"/>
       <echo message="jarfile.uptodate: ${jarfile.uptodate}"/>
@@ -197,7 +198,6 @@
       <fileset dir="bin" />
       <fileset dir="${asmx}/bin" excludes="tmp/**"/>
       <fileset dir="${scene-lib}/bin" excludes="annotations-expected/**,annotations/tests/**"/>
-      <fileset dir="${annotations-compiler}/build/classes" />
     </copy>
     <!-- Also need to get class files in libraries -->
     <unjar src="lib/plume.jar" dest="${temp-jarfile}">
@@ -207,6 +207,18 @@
       </patternset>
     </unjar>
     <unjar src="lib/guava-15.0.jar" dest="${temp-jarfile}">
+      <patternset>
+        <include name="**/*.class"/>
+        <exclude name="META-INF/" />
+      </patternset>
+    </unjar>
+    <unjar src="${annotations-compiler}/dist/lib/javac.jar" dest="${temp-jarfile}">
+      <patternset>
+        <include name="**/*.class"/>
+        <exclude name="META-INF/" />
+      </patternset>
+    </unjar>
+    <unjar src="${annotations-disassembler}/dist/lib/javap.jar" dest="${temp-jarfile}">
       <patternset>
         <include name="**/*.class"/>
         <exclude name="META-INF/" />
