--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ notifications:
     - annotation-tools-dev@googlegroups.com
 
 after_success:
-  - curl -s https://raw.githubusercontent.com/mernst/plume-lib/master/bin/trigger-travis.sh > trigger-travis.sh  
-  - bash trigger-travis.sh typetools checker-framework $TRAVISTOKEN
+  - curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
+  - sh trigger-travis.sh typetools checker-framework $TRAVISTOKEN "Triggered by upstream build of typetools/annotation-tools"
