--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,10 @@ notifications:
     - annotation-tools-dev@googlegroups.com
 
 after_success:
-  - curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
-  - sh trigger-travis.sh typetools checker-framework $TRAVISTOKEN "Triggered by upstream build of typetools/annotation-tools"
+after_success:
+  # The vertical bar (pipe) means multi-line command in YAML.
+  - |
+      if [[ "$TRAVIS_JOB_NUMBER" == *.1 ]] ; then
+	curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
+	sh trigger-travis.sh typetools checker-framework $TRAVISTOKEN
+      fi
