--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ notifications:
     - annotation-tools-dev@googlegroups.com
 
 after_success:
-  # The vertical bar (pipe) means multi-line command in YAML.
   - |
-      if [[ "$TRAVIS_JOB_NUMBER" == *.1 ]] ; then
+      if [[ ($TRAVIS_BRANCH == master) &&
+            ($TRAVIS_PULL_REQUEST == false) &&
+            ( (! $TRAVIS_JOB_NUMBER == *.*) || ($TRAVIS_JOB_NUMBER == *.1) ) ]] ; then
         curl -LO https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh
         sh trigger-travis.sh typetools checker-framework $TRAVISTOKEN
       fi
