--- a/annotation-file-utilities/tests/abbreviated/Makefile
+++ b/annotation-file-utilities/tests/abbreviated/Makefile
@@ -8,23 +8,27 @@
 
 # Put user-specific changes in your own Makefile.user.
 # Make will silently continue if that file does not exist.
--include Makefile.user
+-include ../Makefile.user
 
 # Override these in Makefile.user if the java and javac commands are not on
 # your execution path.  Example from Makefile.user:
 #   JAVA=${JAVA_HOME}/bin/java
 #   JAVAC=${JAVA_HOME}/bin/javac
-JAVA?=java -ea
+JAVA?=java
 JAVAC?=javac
-XJAVAC?=javac
 
 export SHELL=/bin/bash -o pipefail
 
 
+#filter-out reverses order, so use tac to reverse its input first
 DIFFS := $(wildcard *.goal)
 DISABLED := $(shell grep -le "@skip-test" $(DIFFS))
 FILTERED := $(filter-out $(DISABLED),$(DIFFS))
 DIFFS := $(patsubst %.goal, %.diff, $(FILTERED))
+AFU_JARS := ../../lib/plume.jar ../../annotation-file-utilities.jar
+JAIF := C.jaif
+SRC := $(patsubst %.goal, %.java, $(FILTERED))
+OUT := $(patsubst %.goal, %.output, $(FILTERED))
 
 DEBUG :=
 # Use this to enable some debugging.
@@ -33,64 +37,47 @@ DEBUG :=
 default : all
 
 .PHONY: all
-all : $(DIFFS) system-test source-extension results
-
-.PHONY: abbreviated
-abbreviated:
-	-${MAKE} -C abbreviated #The minus(-) indicates that the process should continue if there is a failure
-
-.PHONY: source-extension
-source-extension:
-	-${MAKE} -C source-extension #The minus(-) indicates that the process should continue if there is a failure
-
-.PHONY: system-test
-system-test:
-	echo "system test temporarily disabled"
-#	-${MAKE} -C system-test      #The minus(-) indicates that the process should continue if there is a failure
+all : $(DIFFS) results
 
 # Display results of all .diff files.
 .PHONY: results
-results: bin/VerifyDiffs.class
+results: ../bin/VerifyDiffs.class
+	@rm -rf output
 	@echo ""
 	@echo "=== RESULTS ==="
 	@echo ""
-	@$(JAVA) -cp bin VerifyDiffs --show_all
+	@$(JAVA) -cp bin:../bin VerifyDiffs --show_all
 
 # Remakes the little java program that checks and compares diffs
-bin/VerifyDiffs.class : VerifyDiffs.java
-	@$(JAVAC) -g -cp ../bincompile -d bin VerifyDiffs.java
+../bin/VerifyDiffs.class : ../VerifyDiffs.java
+	@$(JAVAC) -g -cp ../../bincompile -d ../bin ../VerifyDiffs.java
 
 # Compiles all the test cases (be verbose about this).
-compile :
+.PHONY: compile
+compile : $(SRC)
 	mkdir -p bin
-	$(XJAVAC) -g -cp ../bin -d bin *.java
-
-.PRECIOUS : bin/annotator/tests/%.class
-bin/annotator/tests/%.class: %.java
-	mkdir -p bin
-# Added "-Xlint:-options" to see if it permits Jenkins job to succeed, due to
-# problem "target value 1.8 is obsolete and will be removed in a future release"
-	$(XJAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities.jar -d bin -sourcepath . $*.java
+	$(JAVAC) -g -cp bin:../../bin -d bin -sourcepath . $(SRC)
 
 # Actually runs the annotator to create the annotated java file.
 # We are required to put annotation-file-utilities.jar (and ../bin) on the
 # bootclasspath so that the JSR 308 javac classes bundled therein are found
 # before the stock javac classes that the Mac OS includes on the bootclasspath
 # (other platforms do not make such inclusions)
-.PRECIOUS: %.output
-%.output: %.jaif %.java bin/annotator/tests/%.class ../lib/plume.jar ../bin ../annotation-file-utilities.jar
+output: compile $(JAIF) ../../bin $(AFU_JARS)
 	$(JAVA) \
-        -Xbootclasspath/p:../bin:../annotation-file-utilities.jar \
-        -cp bin \
+        -Xbootclasspath/p:../../bin:../../annotation-file-utilities.jar \
+	-cp bin \
 	annotator.Main \
 	${DEBUG} \
-	--abbreviate=false \
-	-d $*-output \
-	$*.jaif \
-	$*.java \
-	2>&1 | tee $*.log
-	find "$*-output" -name '*.java' -print | xargs cat > "$*.output"
-	rm -rf $*-output
+	--abbreviate=true \
+	-d output \
+	$(JAIF) \
+	$(SRC) \
+	2>&1 | tee C.log
+
+.PRECIOUS: %.output
+%.output: output
+	find output -name "$*.java" -print | xargs cat > "$*.output"
 
 # Compare the output of the annotator and the goal file.
 %.diff: %.goal %.output
