--- a/annotation-file-utilities/.classpath
+++ b/annotation-file-utilities/.classpath
@@ -4,9 +4,9 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/scene-lib"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/plume-lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/asm"/>
+	<classpathentry kind="lib" path="lib/guava-15.0.jar"/>
+	<classpathentry kind="lib" path="lib/plume.jar"/>
+	<classpathentry kind="lib" path="lib/asm-5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
